@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PseudoTerminal.m,v 1.344 2006-09-22 23:21:06 yfabian Exp $
+// $Id: PseudoTerminal.m,v 1.345 2006-09-24 05:10:50 yfabian Exp $
 //
 /*
  **  PseudoTerminal.m
@@ -2106,7 +2106,8 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 	{
 		iterationCount++;
 		
-        [self acquireLock];
+        //[self acquireLock];
+        [PTLock lock];
         if (EXIT) break;
 		// periodically create and release autorelease pools
 		if(pool == nil)
@@ -2233,6 +2234,26 @@ end_thread:
     // NSLog(@"PseudoTerminal: -valueInSessionsAtIndex: %d", index);
     return ([[TABVIEW tabViewItemAtIndex:index] identifier]);
 }
+
+-(NSArray*)sessions
+{
+    //[self acquireLock];
+    
+    int n = [TABVIEW numberOfTabViewItems];
+    NSMutableArray *sessions = [NSMutableArray arrayWithCapacity: n];
+    int i;
+    
+    for (i= 0; i < n; i++)
+    {
+        [sessions addObject: [[TABVIEW tabViewItemAtIndex:i] identifier]];
+    } 
+    
+    //[self releaseLock];
+
+    return sessions;
+}
+
+-(void)setSessions: (NSArray*)sessions {}
 
 -(id)valueWithName: (NSString *)uniqueName inPropertyWithKey: (NSString*)propertyKey
 {
